--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <img src="./images/logo.svg" width="236" height="26" alt="Logo" class="header__img">
             <ul class="header__list">
                 <li class="header__item"><a href="./index.html" class="header__item--link">Home</a></li>
-                <li class="header__item"><a href="#" class="header__item--link">About us</a></li>
+                <li class="header__item"><a href="./about.html" class="header__item--link">About us</a></li>
                 <li class="header__item"><a href="#" class="header__item--link">Create your plan</a></li>
             </ul>
             <div class="header__burger">
@@ -99,8 +99,8 @@
             <footer class="footer__section container">
                     <img class="footer__image" src="./images/footer-logo.svg" width="236" height="26" alt="image">
                 <ul class="footer__list">
-                    <li class="footer__item"><a href="#" class="footer__item--link">Home</a></li>
-                    <li class="footer__item"><a href="#" class="footer__item--link">About us</a></li>
+                    <li class="footer__item"><a href="./index.html" class="footer__item--link">Home</a></li>
+                    <li class="footer__item"><a href="./about.html" class="footer__item--link">About us</a></li>
                     <li class="footer__item"><a href="#" class="footer__item--link">Create your plan</a></li>
                 </ul>
                 <div class="footer__socials">
